--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    color: #333;
+    color: blue;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -7,7 +7,7 @@ body{
     padding: 0;
 }
 #cabecera{
-    background: #33A;
+    background: #900;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
