color de fondo, nuevo logo y mejor color de header

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    background-color: #DDD;
     color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,13 +8,16 @@ body{
     padding: 0;
 }
 #cabecera{
-    background: #900;
+    background: #333;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 
+}
+#cabecera #logo{
+    width:50px;
 }
 #cabecera #tagline{
     padding: 1em 0 0 0;
@@ -24,7 +28,7 @@ body{
     width: 70%;
     padding: 0em;
     text-align: left;
-    border: 1px solid #DDD;
+    border: 1px solid #333;
     margin: 0 auto
 }
 #container h1{
@@ -32,4 +36,5 @@ body{
 }
 #post{
     padding:1em;
+    background-color: white;
 }
